Your commit message here

--- a/ridgekeypoint.ipynb
+++ b/ridgekeypoint.ipynb
@@ -931,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +955,7 @@
     "        loss.append(loss_i)\n",
     "    plt.plot(m,loss,label='alpha = {}'.format(j))\n",
     "plt.legend()\n",
-    "plt.xlabel('Alpha')\n",
+    "plt.xlabel('m')\n",
     "plt.ylabel('Loss')\n",
     "plt.show()"
    ]
