--- a/PYTORCH_BASIC_EPISODE_NO_1.ipynb
+++ b/PYTORCH_BASIC_EPISODE_NO_1.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyMLaYAvKWsYt+rfMgKQevD4",
+      "authorship_tag": "ABX9TyM1poeCWAvtUxgXygjaztrI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -447,6 +446,241 @@
           },
           "metadata": {},
           "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# ***3.Random_Tensor***"
+      ],
+      "metadata": {
+        "id": "F6eV_-EHdJTp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "random_tensor=torch.rand(3,4)\n",
+        "random_tensor"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "V1uBJXhodWun",
+        "outputId": "6ce977af-8eee-4374-ca76-86b707f4af62"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.4078, 0.0268, 0.3076, 0.3343],\n",
+              "        [0.8376, 0.5978, 0.2209, 0.2130],\n",
+              "        [0.3694, 0.4570, 0.5337, 0.6723]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "bigger_tensor=torch.rand(1,1,3,4)\n",
+        "bigger_tensor"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8yZMC1A2dqzb",
+        "outputId": "53c5eacd-69a7-49c1-bf28-469f007059d6"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[[0.8476, 0.1426, 0.4900, 0.5029],\n",
+              "          [0.8236, 0.2711, 0.3119, 0.7468],\n",
+              "          [0.4374, 0.2486, 0.8283, 0.2564]]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "bigger_tensor=torch.rand(5,2,3)\n",
+        "bigger_tensor"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QaZ9Ku1yeLvg",
+        "outputId": "7e3d9e5d-721f-4621-8b85-c6da57a328a0"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[0.9657, 0.4016, 0.9376],\n",
+              "         [0.2675, 0.3122, 0.8324]],\n",
+              "\n",
+              "        [[0.0071, 0.0537, 0.7144],\n",
+              "         [0.9506, 0.9207, 0.0701]],\n",
+              "\n",
+              "        [[0.7929, 0.1131, 0.4091],\n",
+              "         [0.1643, 0.4599, 0.1946]],\n",
+              "\n",
+              "        [[0.6225, 0.1446, 0.1077],\n",
+              "         [0.3320, 0.2900, 0.7873]],\n",
+              "\n",
+              "        [[0.8332, 0.7388, 0.5677],\n",
+              "         [0.7254, 0.5185, 0.5585]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "zeros=torch.zeros(3,4)\n",
+        "zeros"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JhRJQbIlftBf",
+        "outputId": "1e8b7291-7b9f-4559-fb7e-e7584f0592d4"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0., 0., 0., 0.],\n",
+              "        [0., 0., 0., 0.],\n",
+              "        [0., 0., 0., 0.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "zeros=torch.zeros(3,3,4)\n",
+        "zeros"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ILqJeKnWfMo4",
+        "outputId": "7bacfaba-99f6-4505-e32e-7c81873dcc95"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[0., 0., 0., 0.],\n",
+              "         [0., 0., 0., 0.],\n",
+              "         [0., 0., 0., 0.]],\n",
+              "\n",
+              "        [[0., 0., 0., 0.],\n",
+              "         [0., 0., 0., 0.],\n",
+              "         [0., 0., 0., 0.]],\n",
+              "\n",
+              "        [[0., 0., 0., 0.],\n",
+              "         [0., 0., 0., 0.],\n",
+              "         [0., 0., 0., 0.]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ones=torch.ones(2,6)\n",
+        "ones"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-uI1HvDJfWDC",
+        "outputId": "9e1b76ad-bbd1-4804-8e92-922d91add585"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1., 1., 1., 1., 1., 1.],\n",
+              "        [1., 1., 1., 1., 1., 1.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ones=torch.ones(3,2,6)\n",
+        "ones"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Rwh0_fJbfmie",
+        "outputId": "e1802c80-e5f2-45d7-f2e2-8ef8f5b4457d"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[1., 1., 1., 1., 1., 1.],\n",
+              "         [1., 1., 1., 1., 1., 1.]],\n",
+              "\n",
+              "        [[1., 1., 1., 1., 1., 1.],\n",
+              "         [1., 1., 1., 1., 1., 1.]],\n",
+              "\n",
+              "        [[1., 1., 1., 1., 1., 1.],\n",
+              "         [1., 1., 1., 1., 1., 1.]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
         }
       ]
     }
