--- a/PYTORCH_BASIC_EPISODE_NO_1.ipynb
+++ b/PYTORCH_BASIC_EPISODE_NO_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM1poeCWAvtUxgXygjaztrI",
+      "authorship_tag": "ABX9TyOg0ONWbnYHWpfWyVmkOz0v",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -681,6 +681,420 @@
           },
           "metadata": {},
           "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Creating arange and tensor_like**"
+      ],
+      "metadata": {
+        "id": "HfqtHcHoieA0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x =torch.arange(start=0,end=20)\n",
+        "x"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZRupxkwKisMX",
+        "outputId": "4b15b03f-38f5-47dd-dda4-7c59a8826194"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17,\n",
+              "        18, 19])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x =torch.arange(0,20)\n",
+        "x"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_DFudb5NjPm2",
+        "outputId": "3f78d274-6863-463d-f44a-78b3319797bc"
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17,\n",
+              "        18, 19])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 40
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x =torch.arange(start=0,end=20,step=2)\n",
+        "x"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "B8TBsMyGjY6i",
+        "outputId": "6247cc88-150f-40af-bd22-6cb6f37500c3"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([ 0,  2,  4,  6,  8, 10, 12, 14, 16, 18])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x =torch.arange(0,100,2)\n",
+        "x"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8x5sU319jbjm",
+        "outputId": "8385d441-d302-4e2c-fa09-2dd426b1ed1c"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([ 0,  2,  4,  6,  8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30, 32, 34,\n",
+              "        36, 38, 40, 42, 44, 46, 48, 50, 52, 54, 56, 58, 60, 62, 64, 66, 68, 70,\n",
+              "        72, 74, 76, 78, 80, 82, 84, 86, 88, 90, 92, 94, 96, 98])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sample = torch.rand(3,4)\n",
+        "sample"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "N3jLDF42jmlm",
+        "outputId": "0af74b8d-1e75-4554-e0c1-676c49d49d26"
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.5458, 0.1971, 0.2601, 0.0871],\n",
+              "        [0.4632, 0.6104, 0.4662, 0.5045],\n",
+              "        [0.0030, 0.6920, 0.7947, 0.8117]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 45
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "zeros_like_tensor = torch.zeros_like(sample)\n",
+        "zeros_like_tensor"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QFoPWYgsjtCI",
+        "outputId": "c3a9d86b-5534-4909-e255-202c6a40be64"
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0., 0., 0., 0.],\n",
+              "        [0., 0., 0., 0.],\n",
+              "        [0., 0., 0., 0.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ones_like_tensor = torch.ones_like(sample)\n",
+        "ones_like_tensor"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rJpKjfEcj60E",
+        "outputId": "91aff75c-f985-4b19-cfd0-b7fcd21c282d"
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1., 1., 1., 1.],\n",
+              "        [1., 1., 1., 1.],\n",
+              "        [1., 1., 1., 1.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 48
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Torch Eye(use in Masking concepts)**"
+      ],
+      "metadata": {
+        "id": "BAIJeNm2lKCi"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch_eye = torch.eye(2)\n",
+        "torch_eye"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "U4UdJRbulJM0",
+        "outputId": "fe18ef0d-cc9e-46d9-805f-e16f19c76133"
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1., 0.],\n",
+              "        [0., 1.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 49
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch_eye = torch.eye(4,2)\n",
+        "torch_eye"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KflGlxM8l75E",
+        "outputId": "9db5e06d-e0f4-4a21-ea05-98e73f452fc2"
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1., 0.],\n",
+              "        [0., 1.],\n",
+              "        [0., 0.],\n",
+              "        [0., 0.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 53
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Torch.full(Tensor values can be defined as required.)**"
+      ],
+      "metadata": {
+        "id": "OIfestWnnddw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "full_tensor = torch.full((5,3),7)\n",
+        "full_tensor"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HTDRbuJCncIz",
+        "outputId": "d305fa19-a968-4ae3-ddb3-a44bad2e32f7"
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[7, 7, 7],\n",
+              "        [7, 7, 7],\n",
+              "        [7, 7, 7],\n",
+              "        [7, 7, 7],\n",
+              "        [7, 7, 7]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 54
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "full_tensor = torch.full((4,3),9)\n",
+        "full_tensor"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "adJEfzX7n8Ue",
+        "outputId": "4303d211-7a38-4dca-9740-656760a27702"
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[9, 9, 9],\n",
+              "        [9, 9, 9],\n",
+              "        [9, 9, 9],\n",
+              "        [9, 9, 9]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 56
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Torch.linspace(torch.linspace divides an interval into equal parts and returns the points.)**"
+      ],
+      "metadata": {
+        "id": "8PcrJ44vqRVm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "linear_tensor = torch.linspace(1,10,5)\n",
+        "linear_tensor"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7Rz1nU-eqayP",
+        "outputId": "518b5fd3-c16d-443f-ecf0-838403d5f06d"
+      },
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([ 1.0000,  3.2500,  5.5000,  7.7500, 10.0000])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 57
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "linear_tensor = torch.linspace(1,10,50)\n",
+        "linear_tensor"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dLahxFWIqsWh",
+        "outputId": "5a76258c-0edc-40e0-cf9c-906520dd9375"
+      },
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([ 1.0000,  1.1837,  1.3673,  1.5510,  1.7347,  1.9184,  2.1020,  2.2857,\n",
+              "         2.4694,  2.6531,  2.8367,  3.0204,  3.2041,  3.3878,  3.5714,  3.7551,\n",
+              "         3.9388,  4.1224,  4.3061,  4.4898,  4.6735,  4.8571,  5.0408,  5.2245,\n",
+              "         5.4082,  5.5918,  5.7755,  5.9592,  6.1429,  6.3265,  6.5102,  6.6939,\n",
+              "         6.8776,  7.0612,  7.2449,  7.4286,  7.6122,  7.7959,  7.9796,  8.1633,\n",
+              "         8.3469,  8.5306,  8.7143,  8.8980,  9.0816,  9.2653,  9.4490,  9.6327,\n",
+              "         9.8163, 10.0000])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 58
         }
       ]
     }
